// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> component should render a html link element with the correct title 1`] = `
.emotion-0 {
  color: #00677f;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:has(span):hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:has(span):hover span {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active {
  color: #003946;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus-visible {
  outline: 2px solid #000000;
}

<div>
  <a
    class="emotion-0 emotion-1"
    data-testid="link"
    href="/"
  >
    Redirect To
  </a>
</div>
`;

exports[`<Link /> component should render an html link element as secondary 1`] = `
.emotion-0 {
  color: #3e3e3e;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:has(span):hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:has(span):hover span {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active {
  color: #1d1d1d;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus-visible {
  outline: 2px solid #000000;
}

<div>
  <a
    class="emotion-0 emotion-1"
    color="secondary"
    data-testid="link"
    href="/"
  >
    Redirect To
  </a>
</div>
`;
